# contextualizer

./: .gitignore  AGENTS.md  README.md  contextualizer.code-workspace  pyproject.toml
docs/openapi/: openapi.yaml
examples/: contexts.json
src/contextualizer/: __main__.py  api.py  context_manager.py  models.py  storage.py  tray.py
src/contextualizer/platform/: __init__.py  linux.py  macos.py  windows.py
tests/: test_api.py  test_context_manager.py  test_models.py  test_storage.py
